--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-bootstrap-icons": "^1.4.0",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-multiple-image-uploader": "^1.0.3",
     "react-router-bootstrap": "^0.25.0",
@@ -56,6 +58,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-bootstrap-table-next": "^4.0.14",
+    "@types/react-bootstrap-table2-paginator": "^2.1.1",
     "@typescript-eslint/eslint-plugin": "4.21.0",
     "@typescript-eslint/parser": "4.21.0",
     "babel-eslint": "10.1.0",
