--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-multiple-image-uploader": "^1.0.3",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
