--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "@types/axios": "^0.14.0",
+    "@types/fslightbox-react": "^1.4.1",
     "@types/googlemaps": "^3.43.3",
     "@types/jest": "^26.0.22",
     "@types/node": "^12.20.7",
@@ -19,7 +20,9 @@
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.4.1",
     "formik": "^2.2.8",
+    "fslightbox-react": "^1.6.2-2",
     "http-proxy-middleware": "^1.1.0",
+    "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
@@ -28,7 +31,6 @@
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "react-multiple-image-uploader": "^1.0.3",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -63,6 +65,7 @@
   "devDependencies": {
     "@types/react-bootstrap-table-next": "^4.0.14",
     "@types/react-bootstrap-table2-paginator": "^2.1.1",
+    "@types/simple-react-lightbox": "^3.6.1",
     "@typescript-eslint/eslint-plugin": "4.21.0",
     "@typescript-eslint/parser": "4.21.0",
     "babel-eslint": "10.1.0",
